--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,6 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
       <!-- endbower -->
@@ -22,23 +21,34 @@
     <!-- endbuild -->
   </head>
   <body ng-app="bTestApp">
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
+    <header>
+      <div class="container">
+        <div class="jumbotron" id="banner"></div>
+        <div class="menu-push-top"></div>
+        <div class="main-menu-wrap" ng-include="'components/navbar/navbar.html'"></div>
+        <div class="menu-push"></div>
+      </div>
+    </header>
+
     <div ui-view=""></div>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-XXXXX-X');
-      ga('send', 'pageview');
-    </script>
+    <footer class="footer">
+      <div class="container">
+        <div class="filler"></div>
+      </div>
+    </footer>
 
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
@@ -60,10 +70,12 @@
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="app/app.js"></script>
           <!-- injector:js -->
-          <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
-          <script src="components/modal/modal.service.js"></script>
+          <script src="app/main/product/product.controller.js"></script>
+          <script src="app/main/products/products.controller.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
+          <script src="components/saleSlider/saleSlider.directive.js"></script>
+          <script src="components/sidebar/sidebar.controller.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
 </body>
